# Swarm

./: CMakeLists.txt  imgui.ini  vcpkg.json
assets/shaders/: boid.vert
src/: main.cpp
src/graphics/: Shader.cpp  Shader.h
src/simulation/: Boid.h
src/ui/: ImGuiLayer.cpp  ImGuiLayer.h
